testes - edição de entrada de prontuário, adição de documento à uma consulta, deleção de documento de uma consulta, cadastro de usuário pelo gerente

--- a/medical_office_manager/office/templates/office/appointments_list_doctor.html
+++ b/medical_office_manager/office/templates/office/appointments_list_doctor.html
@@ -41,7 +41,7 @@
                 <td>
                     <table>
                         <tr>
-                            <th style = "border: none">CONSULTAS - {{date}}</th>
+                            <th id="appointmentListTitle" style = "border: none">CONSULTAS - {{date}}</th>
                         </tr>
                         <tr>
                             <th>Horários</th>
@@ -55,7 +55,7 @@
                                     {{appointment.0}}
                                 </td>
                                 
-                                <td>
+                                <td >
                                     {{appointment.1}}
                                 </td>
 
