--- a/medical_office_manager/office/templates/office/display_appointment_details.html
+++ b/medical_office_manager/office/templates/office/display_appointment_details.html
@@ -59,7 +59,10 @@
         </form>
 
         {% else%}
+        <div id="medicalRecordEntryContent">
             {{medical_record_entry.0.content}}
+        </div>
+            
             <br><br>
             <button id="btEditar" onclick="window.location='{% url 'office:edit_medical_record_entry' appointment.id%}'; return false;" >Editar</button>
             <p> <br></p>
@@ -91,21 +94,20 @@
         
         {% for documento in documentos%}
           
-            <a id="documento_titulo" style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
+            <a id="{{documento.titulo}}" style = "text-decoration:none; color: black" href="{{documento.documento_location.url}}"><strong>-</strong> {{documento.titulo}}</a>
             <br>
 
-            <form id="form_deletar_documento" action='{% url 'office:confirm_delete_document_from_appointment' appointment.id documento.id%}' method="POST" onsubmit="return confirm('Tem certeza que deseja deletar esse documento?');">
+            <form id="form_deletar_documento" action='{% url 'office:delete_document_from_appointment' appointment.id documento.id%}' method="POST" > 
+            <!-- onsubmit="return confirm('Tem certeza que deseja deletar esse documento?');"-->
+            <!-- onsubmit="return submitForm();"-->
               {% csrf_token %}
               
-              <button type="submit" id="bt_deletar" class="btn btn-danger btn-sm" data-bs-dismiss="modal" >Deletar</button>
+              <button type="submit" id="{{'btDeletar'|add:documento.titulo}}" class="btn btn-danger btn-sm"   value="Deletar">Deletar</button>
           </form>
          
             <br>
 
         {% endfor %}
-
-        
-    
 
     </section>
 
